[gd_scene load_steps=18 format=3 uid="uid://okgdh6lxccmk"]

[ext_resource type="Script" path="res://scripts/spells/projectiles/fireball.gd" id="1_3fff5"]
[ext_resource type="Texture2D" uid="uid://c3nmh7xges1un" path="res://assets/textures/fireball.png" id="2_65iwk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_68gix"]
radius = 2.0

[sub_resource type="Animation" id="Animation_tkj5v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_jk4u3"]
resource_name = "fired"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_wfh3y"]
resource_name = "loaded"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_83b1w"]
_data = {
"RESET": SubResource("Animation_tkj5v"),
"fired": SubResource("Animation_jk4u3"),
"loaded": SubResource("Animation_wfh3y")
}

[sub_resource type="Gradient" id="Gradient_xgf0y"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5veue"]
gradient = SubResource("Gradient_xgf0y")

[sub_resource type="Curve" id="Curve_6lven"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_jkvya"]
curve = SubResource("Curve_6lven")

[sub_resource type="Curve" id="Curve_121b1"]
_data = [Vector2(0, 1), 0.0, 0.181887, 0, 0, Vector2(1, 0.021978), -2.88462, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_t1tok"]
curve = SubResource("Curve_121b1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pkw8s"]
lifetime_randomness = 0.31
particle_flag_align_y = true
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3(0, 0, 0)
flatness = 0.831
gravity = Vector3(0, -20, 0)
radial_accel_min = 4.0
radial_accel_max = 4.0
scale_min = 0.5
scale_max = 2.0
scale_curve = SubResource("CurveTexture_t1tok")
color = Color(1, 0.640333, 0.17, 1)
color_ramp = SubResource("GradientTexture1D_5veue")
emission_curve = SubResource("CurveTexture_jkvya")
turbulence_noise_scale = 3.633

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4nvlo"]
lifetime_randomness = 0.31
particle_flag_align_y = true
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3(-1, 0, 0)
spread = 90.0
flatness = 0.393
initial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
radial_accel_min = 4.0
radial_accel_max = 4.0
scale_min = 0.5
scale_max = 2.0
scale_curve = SubResource("CurveTexture_t1tok")
color = Color(1, 0.640333, 0.17, 1)
color_ramp = SubResource("GradientTexture1D_5veue")
emission_curve = SubResource("CurveTexture_jkvya")
turbulence_noise_scale = 3.633

[sub_resource type="Gradient" id="Gradient_otohi"]
offsets = PackedFloat32Array(0, 0.714286)
colors = PackedColorArray(0.430211, 0.31687, 0.236935, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_q7l7x"]
gradient = SubResource("Gradient_otohi")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Fireball" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_3fff5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
texture_filter = 1
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_68gix")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_65iwk")
hframes = 4
vframes = 2
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_83b1w")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(7.9, 7.9)

[node name="Embers" type="GPUParticles2D" parent="."]
position = Vector2(1, 0)
amount = 75
process_material = SubResource("ParticleProcessMaterial_pkw8s")
lifetime = 2.0
randomness = 1.0

[node name="Splash" type="GPUParticles2D" parent="."]
position = Vector2(1, 0)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_4nvlo")
lifetime = 1.5
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(1, 0)
energy = 2.0
shadow_enabled = true
shadow_filter_smooth = 23.2
texture = SubResource("GradientTexture2D_q7l7x")
texture_scale = 5.0

[node name="CollisionTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_collision_timer_timeout"]
